# svblock

./: .gitignore  CLAUDE.md  LICENSE  README.md  implementation_plan.md  pyproject.toml  ruff.toml  svblock-architecture.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.rst  architecture.rst  block-diagrams.rst  cli-reference.rst  conf.py  contributing.rst  examples.rst  getting-started.rst  index.rst  port-grouping.rst  sphinx-extension.rst  themes.rst
docs/_static/css/: custom.css
src/svblock/: __init__.py  cli.py  config.py
src/svblock/exporters/: __init__.py  pdf.py  png.py
src/svblock/layout/: __init__.py  block_layout.py  engine.py  grouping.py  text_metrics.py
src/svblock/model/: __init__.py  block_ir.py  module_ir.py  port_types.py
src/svblock/parser/: __init__.py  annotation.py  hierarchy_extractor.py  sv_extractor.py
src/svblock/renderer/: __init__.py  block_renderer.py  svg_renderer.py  themes.py
src/svblock/sphinx_ext/: __init__.py  directive.py
tests/: conftest.py  test_annotations.py  test_block_layout.py  test_block_renderer.py  test_cli.py  test_e2e.py  test_exporters.py  test_grouping.py  test_hierarchy_extractor.py  test_layout.py  test_model.py  test_parser.py  test_renderer.py  test_sphinx_ext.py  test_text_metrics.py  test_themes.py  update_snapshots.py
tests/fixtures/: active_low.sv  annotated_module.sv  block_bidir.sv  block_simple.sv  block_single.sv  bus_ports.sv  clock_reset.sv  heuristic_groups.sv  interface_ports.sv  large_module.sv  multi_module.sv  multidim_array.sv  no_ports.sv  non_ansi.sv  params.sv  partial_annotations.sv  simple_module.sv  type_params.sv
