[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "svblock"
version = "0.1.0"
description = "A SystemVerilog-native module symbol (pin diagram) generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Glen Zachariah" },
]
keywords = ["systemverilog", "verilog", "symbol", "pin-diagram", "svg", "eda"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "pyslang>=6.0",
]

[project.optional-dependencies]
png = ["cairosvg>=2.7"]
pdf = ["cairosvg>=2.7"]
sphinx = ["sphinx>=5"]
docs = [
    "sphinx>=5",
    "sphinx-rtd-theme>=2.0",
]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "mypy>=1.0",
    "types-docutils>=0.20",
]

[project.scripts]
svblock = "svblock.cli:main"

[project.urls]
Repository = "https://github.com/glenzac/svblock"

[tool.hatch.build.targets.wheel]
packages = ["src/svblock"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disable_error_code = ["import-untyped", "import-not-found"]
exclude = ["svblock/sphinx_ext/"]

[[tool.mypy.overrides]]
module = [
    "svblock.parser.sv_extractor",
]
disable_error_code = ["import-untyped", "import-not-found", "attr-defined"]
